# schnelLFMM

./: Cargo.toml  DESIGN.md  DESIGN3.md  INTEGRATION.md  README.md  mathematical-notes.md  simulate_gwas.py
.cargo/: config.toml
.github/scripts/: build-linux-x86_64.sh
.github/workflows/: rust.yml
ath/: compare.R  run.sh
examples/ath/: FT10.csv  compare.R  pheno.tsv  run.sh
examples/sim/: ath_sim_genes_simple.gff.xz  compare.R  run.sh  simulate_gwas.py  traits.csv
src/: bed.rs  lib.rs  main.rs  mathematical-notes.md  nmf.rs  parallel.rs  precompute.rs  progress.rs  rsvd.rs  simulate.rs  testing.rs  timer.rs
testdata/: run_lea_comparison.R
tests/: integration.rs  nmf_validation.R  profile.rs
