[package]
name = "schnellfmm"
version = "0.2.0"
edition = "2021"

[features]
profiling = []

[dependencies]
ndarray = { version = "0.16", features = ["blas"] }
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
ndarray-rand = "0.15"
ndarray-npy = "0.9"
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
memmap2 = "0.9"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
statrs = "0.17"
anyhow = "1"
byteorder = "1"
tempfile = "3"
indicatif = "0.18.4"

[patch.crates-io]
native-tls = {git = "https://github.com/rust-native-tls/rust-native-tls"}

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"    # use this target if none is explicitly provided
pre-build = [                                  # additional commands to run prior to building the package
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH libopenblas-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.build.env]
passthrough=[
    "NOFORTRAN=1",
]
